@@ -1,3 +1,7 @@
+Mon Jan  7 17:28:54 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* gnulib/lib/xmalloc.patch: Add commentary.
+
 Mon Jan  7 15:30:56 GMT 2008  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* po/ru.po: Update from Translation Project.
